LPS-131266 prevents scrollbar from showing up when opening a modal using ItemSelectorDialog

--- a/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/application/_modal.scss
+++ b/modules/apps/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/application/_modal.scss
@@ -61,3 +61,9 @@
 html.modal-open {
 	overflow: initial;
 }
+
+.modal-open {
+	.modal {
+		overflow: hidden;
+	}
+}
